# Valdi_SSRF

apps/ssrf_poc/: BUILD.bazel  package.json
apps/ssrf_poc/app_assets/android/values/: colors.xml  themes.xml
apps/ssrf_poc/src/valdi/ssrf_poc/src/: index.ts
ssrf_poc/src/valdi/_configs/: base.tsconfig.json
ssrf_poc/src/valdi/ssrf_poc/: BUILD.bazel  tsconfig.json
ssrf_poc/src/valdi/ssrf_poc/src/: SSRFPOCApp.tsx
