load("//bzl/valdi:valdi_application.bzl", "valdi_application")
load("//bzl/valdi:valdi_exported_library.bzl", "valdi_exported_library")

valdi_application(
    name = "ssrf_poc",
    android_activity_theme_name = "Theme.MyApp.Launch",
    android_app_icon_name = "app_icon",
    android_resource_files = glob(["app_assets/android/**"]),
    ios_app_icons = glob(["app_assets/ios/Icons.xcassets/**"]),
    ios_bundle_id = "com.snap.valdi.urlpreview",
    ios_families = ["iphone"],
    root_component_path = "App@ssrf_poc/src/SSRFPOCApp",
    title = "URL Preview",
    version = "1.0.0",
    deps = ["//apps/ssrf_poc/src/valdi/ssrf_poc"],
)

valdi_exported_library(
    name = "ssrf_poc_export",
    ios_bundle_id = "com.snap.urlpreview.lib",
    ios_bundle_name = "URLPreview",
    deps = ["//apps/ssrf_poc/src/valdi/ssrf_poc"],
)

