load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "ssrf_poc",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.snap.valdi.modules.ssrf_poc",
    android_output_target = "release",
    ios_module_name = "SCCSSRFPOC",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_tsx",
        "//src/valdi_modules/src/valdi/valdi_http",
    ],
)

